--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -22,10 +22,10 @@ jobs:
         with:
           fetch-depth: 0  # for posts's lastmod
 
-      - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: 2.7
+          ruby-version: '3.1'
 
       - name: Bundle Caching
         uses: actions/cache@v2
